--- a/Lab1/lab1todolist.html
+++ b/Lab1/lab1todolist.html
@@ -17,7 +17,7 @@
  let taskItem = document.createElement("li");
  taskItem.innerText = taskField.value;
  taskList.appendChild(taskItem);
- taskField.value = "ssssgs";
+ taskField.value = "second";
  }
  </script>
 </body>
