--- a/Lab1/lab1todolist.html
+++ b/Lab1/lab1todolist.html
@@ -17,6 +17,14 @@
 
 
 <script>
+    let addButton = document.getElementById("addButton");
+    let taskList = document.getElementById("taskList");
+
+    
+
+
+
+
 
 </script>
 
