--- a/Lab1/lab1todolist.html
+++ b/Lab1/lab1todolist.html
@@ -10,25 +10,41 @@
 
 <body>
 
-    <div id="app"> {{message}}</div>
+    <div id="app"> 
+        
+                       
+        <h1>My To-do List</h1>
 
-    <h1>My To-do List</h1>
-    <input type="text" placeholder="Type" class="newTask" id="newTask">
-    <input type="button" value="add" class="addButton" id="addButton">
-    <ul id="taskList"></ul>
+        <input v-model="message" placeholder="type:" class="newTask"/>
+
+        <ul id="taskList" class="taskList">
+            <li v-for="(messages, index) in messages" :key="index">
+                {{messages}}
+            </li>
+        </ul>
+
+        <button @click="addmessage" class="addButton">Add</button>
+
+    </div>
+
+
 </body>
 
 
-
-
 <script>
-    //let addButton = document.getElementById("addButton");
-    //let taskList = document.getElementById("taskList");
 
     const app = Vue.createApp({
         data(){
             return {
-                message: "Hello"
+                messages: []
+            }
+        },
+        methods: {
+            addmessage(){
+                if (this.message.trim() != ""){
+                    this.messages.push(this.message);
+                    this.message = "";
+                }
             }
         }
     })
@@ -50,23 +66,8 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <style> 
+
     body {background-color: rgb(101,101,101);}
     h1 {
         position:fixed;
@@ -75,17 +76,26 @@
     }
     .addButton {
         position:fixed;
-        left: 49.5%;
+        left: 49%;
         top: 175px;
         border-color: white;
-        width: 100px;
-        height: 50px;
+        width: 125px;
+        height: 60px;
         background-color: rgb(101,101,101);
+        font-size: 25px;
         }  
     .newTask {
         position: relative;
-        left: 47.5%;
-        top: 110px;
+        width: 270px;
+        height: 30px;
+        left: 42.5%;
+        top: 90px;
+    }
+    .taskList {
+        position: fixed;
+        left: 50%;
+        top: 250px;
+        font-size: 25px;
     }
 </style>
 
