image file added

--- a/Lab1/lab1classapp.html
+++ b/Lab1/lab1classapp.html
@@ -51,7 +51,7 @@
                     subject: "Maths <em>test</em> ",
                     location: "London",
                     price: 100,
-                    imagepath: "./mathicon.jpg",
+                    imagepath: "images/mathicon.jpg",
                     altimagetext: "Maths Icon"
                 }
                 
