--- a/Lab1/lab1petdepot.html
+++ b/Lab1/lab1petdepot.html
@@ -51,7 +51,7 @@
                     title: "Cat food, 25lb bag",
                     desc: "A 25lb bag is nice",
                     price: 2000,
-                    imagepath: "./catfood.jpg",
+                    imagepath: "images/catfood.jpg",
                     altimagetext: "Cat Food Icon",
                     stock: 5
                     
