--- a/Lab1/lab1petdepot.html
+++ b/Lab1/lab1petdepot.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>pet depot</title>
+    <title>pet depot change for github</title>
     
     
 </head>
